stop offscreen focus from moving the screen

--- a/src/scss/03-generic/_reset.scss
+++ b/src/scss/03-generic/_reset.scss
@@ -1,6 +1,6 @@
 html {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 *,
 *:before,
 *:after {
@@ -9,6 +9,10 @@ html {
 body {
   padding: 0;
   margin: 0;
+}
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 button {
   font-family: inherit;
