--- a/src/scss/05-objects/_layout.scss
+++ b/src/scss/05-objects/_layout.scss
@@ -1,10 +1,13 @@
 .layout-wrap {
-    // max-width: px-to-rem(480px);
-    max-width: 480px;
     margin: auto;
-    padding-left: $space-1;
-    padding-right: $space-1;
+    padding-left: $space-2;
+    padding-right: $space-2;
     @include breakpointWrap('md') {
-        max-width: px-to-rem(map-get($breakpoints, 'md'));
+        padding-left: $space-6;
+        padding-right: $space-6;
+    }
+    @include breakpointWrap('lg') {
+        padding-left: $space-7;
+        padding-right: $space-7;
     }
 }
