--- a/src/scss/06-components/_accessibility-controls.scss
+++ b/src/scss/06-components/_accessibility-controls.scss
@@ -12,6 +12,7 @@
     transform: translateX(0%);
   }
 }
+
 .accessibility-control {
   display: inline-block;
   position: relative;
@@ -24,12 +25,16 @@
     border: px-to-rem(2px) solid transparent;
     border-radius: 50%;
     padding: 0;
-    height: $space-8;
-    width: $space-8;
+    height: $space-7;
+    width: $space-7;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: border-color 200ms ease;
+    @include breakpointWrap('md') {
+      height: $space-8;
+      width: $space-8;
+    }
     &:hover {
       border-color: var(--link-color);
     }
